RHAIENG-3083: release(manifests): update `EXPECTED_NUM_RECORDS` and downshift and add new image entries in env files (#1875)

--- a/manifests/base/kustomization.yaml
+++ b/manifests/base/kustomization.yaml
@@ -133,6 +133,19 @@ replacements:
           name: s2i-minimal-notebook
           version: v1
   - source:
+      fieldPath: data.odh-workbench-jupyter-minimal-cpu-py311-ubi9-n-7
+      kind: ConfigMap
+      name: notebook-image-params
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.7.from.name
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: s2i-minimal-notebook
+          version: v1
+  - source:
       fieldPath: data.odh-workbench-jupyter-datascience-cpu-py312-ubi9-n
       kind: ConfigMap
       name: notebook-image-params
@@ -218,6 +231,19 @@ replacements:
     targets:
       - fieldPaths:
           - spec.tags.6.from.name
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: s2i-generic-data-science-notebook
+          version: v1
+  - source:
+      fieldPath: data.odh-workbench-jupyter-datascience-cpu-py311-ubi9-n-7
+      kind: ConfigMap
+      name: notebook-image-params
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.7.from.name
         select:
           group: image.openshift.io
           kind: ImageStream
@@ -315,6 +341,19 @@ replacements:
           name: minimal-gpu
           version: v1
   - source:
+      fieldPath: data.odh-workbench-jupyter-minimal-cuda-py311-ubi9-n-7
+      kind: ConfigMap
+      name: notebook-image-params
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.7.from.name
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: minimal-gpu
+          version: v1
+  - source:
       fieldPath: data.odh-workbench-jupyter-pytorch-cuda-py312-ubi9-n
       kind: ConfigMap
       name: notebook-image-params
@@ -400,6 +439,19 @@ replacements:
     targets:
       - fieldPaths:
           - spec.tags.6.from.name
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: pytorch
+          version: v1
+  - source:
+      fieldPath: data.odh-workbench-jupyter-pytorch-cuda-py311-ubi9-n-7
+      kind: ConfigMap
+      name: notebook-image-params
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.7.from.name
         select:
           group: image.openshift.io
           kind: ImageStream
@@ -497,6 +549,19 @@ replacements:
           name: tensorflow
           version: v1
   - source:
+      fieldPath: data.odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-n-7
+      kind: ConfigMap
+      name: notebook-image-params
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.7.from.name
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: tensorflow
+          version: v1
+  - source:
       fieldPath: data.odh-workbench-jupyter-trustyai-cpu-py312-ubi9-n
       kind: ConfigMap
       name: notebook-image-params
@@ -575,6 +640,19 @@ replacements:
           name: odh-trustyai-notebook
           version: v1
   - source:
+      fieldPath: data.odh-workbench-jupyter-trustyai-cpu-py311-ubi9-n-6
+      kind: ConfigMap
+      name: notebook-image-params
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.6.from.name
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: odh-trustyai-notebook
+          version: v1
+  - source:
       fieldPath: data.odh-workbench-codeserver-datascience-cpu-py312-ubi9-n
       kind: ConfigMap
       name: notebook-image-params
@@ -640,6 +718,19 @@ replacements:
           name: code-server-notebook
           version: v1
   - source:
+      fieldPath: data.odh-workbench-codeserver-datascience-cpu-py311-ubi9-n-5
+      kind: ConfigMap
+      name: notebook-image-params
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.5.from.name
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: code-server-notebook
+          version: v1
+  - source:
       fieldPath: data.odh-workbench-jupyter-minimal-rocm-py312-ubi9-n
       kind: ConfigMap
       name: notebook-image-params
@@ -673,6 +764,19 @@ replacements:
     targets:
       - fieldPaths:
           - spec.tags.2.from.name
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: jupyter-rocm-minimal
+          version: v1
+  - source:
+      fieldPath: data.odh-workbench-jupyter-minimal-rocm-py311-ubi9-n-3
+      kind: ConfigMap
+      name: notebook-image-params
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.3.from.name
         select:
           group: image.openshift.io
           kind: ImageStream
@@ -718,6 +822,19 @@ replacements:
           name: jupyter-rocm-pytorch
           version: v1
   - source:
+      fieldPath: data.odh-workbench-jupyter-pytorch-rocm-py311-ubi9-n-3
+      kind: ConfigMap
+      name: notebook-image-params
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.3.from.name
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: jupyter-rocm-pytorch
+          version: v1
+  - source:
       fieldPath: data.odh-workbench-jupyter-tensorflow-rocm-py312-ubi9-n
       kind: ConfigMap
       name: notebook-image-params
@@ -757,6 +874,19 @@ replacements:
           name: jupyter-rocm-tensorflow
           version: v1
   - source:
+      fieldPath: data.odh-workbench-jupyter-tensorflow-rocm-py311-ubi9-n-3
+      kind: ConfigMap
+      name: notebook-image-params
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.3.from.name
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: jupyter-rocm-tensorflow
+          version: v1
+  - source:
       fieldPath: data.odh-workbench-jupyter-pytorch-llmcompressor-cuda-py312-ubi9-n
       kind: ConfigMap
       name: notebook-image-params
@@ -764,6 +894,19 @@ replacements:
     targets:
       - fieldPaths:
           - spec.tags.0.from.name
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: jupyter-pytorch-llmcompressor
+          version: v1
+  - source:
+      fieldPath: data.odh-workbench-jupyter-pytorch-llmcompressor-cuda-py312-ubi9-n-1
+      kind: ConfigMap
+      name: notebook-image-params
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.1.from.name
         select:
           group: image.openshift.io
           kind: ImageStream
@@ -861,6 +1004,19 @@ replacements:
           name: s2i-minimal-notebook
           version: v1
   - source:
+      fieldPath: data.odh-workbench-jupyter-minimal-cpu-py311-ubi9-commit-n-7
+      kind: ConfigMap
+      name: notebook-image-commithash
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.7.annotations.[opendatahub.io/notebook-build-commit]
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: s2i-minimal-notebook
+          version: v1
+  - source:
       fieldPath: data.odh-workbench-jupyter-datascience-cpu-py312-ubi9-commit-n
       kind: ConfigMap
       name: notebook-image-commithash
@@ -946,6 +1102,19 @@ replacements:
     targets:
       - fieldPaths:
           - spec.tags.6.annotations.[opendatahub.io/notebook-build-commit]
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: s2i-generic-data-science-notebook
+          version: v1
+  - source:
+      fieldPath: data.odh-workbench-jupyter-datascience-cpu-py311-ubi9-commit-n-7
+      kind: ConfigMap
+      name: notebook-image-commithash
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.7.annotations.[opendatahub.io/notebook-build-commit]
         select:
           group: image.openshift.io
           kind: ImageStream
@@ -1043,6 +1212,19 @@ replacements:
           name: minimal-gpu
           version: v1
   - source:
+      fieldPath: data.odh-workbench-jupyter-minimal-cuda-py311-ubi9-commit-n-7
+      kind: ConfigMap
+      name: notebook-image-commithash
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.7.annotations.[opendatahub.io/notebook-build-commit]
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: minimal-gpu
+          version: v1
+  - source:
       fieldPath: data.odh-workbench-jupyter-pytorch-cuda-py312-ubi9-commit-n
       kind: ConfigMap
       name: notebook-image-commithash
@@ -1128,6 +1310,19 @@ replacements:
     targets:
       - fieldPaths:
           - spec.tags.6.annotations.[opendatahub.io/notebook-build-commit]
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: pytorch
+          version: v1
+  - source:
+      fieldPath: data.odh-workbench-jupyter-pytorch-cuda-py311-ubi9-commit-n-7
+      kind: ConfigMap
+      name: notebook-image-commithash
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.7.annotations.[opendatahub.io/notebook-build-commit]
         select:
           group: image.openshift.io
           kind: ImageStream
@@ -1225,6 +1420,19 @@ replacements:
           name: tensorflow
           version: v1
   - source:
+      fieldPath: data.odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-commit-n-7
+      kind: ConfigMap
+      name: notebook-image-commithash
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.7.annotations.[opendatahub.io/notebook-build-commit]
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: tensorflow
+          version: v1
+  - source:
       fieldPath: data.odh-workbench-jupyter-trustyai-cpu-py312-ubi9-commit-n
       kind: ConfigMap
       name: notebook-image-commithash
@@ -1303,6 +1511,19 @@ replacements:
           name: odh-trustyai-notebook
           version: v1
   - source:
+      fieldPath: data.odh-workbench-jupyter-trustyai-cpu-py311-ubi9-commit-n-6
+      kind: ConfigMap
+      name: notebook-image-commithash
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.6.annotations.[opendatahub.io/notebook-build-commit]
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: odh-trustyai-notebook
+          version: v1
+  - source:
       fieldPath: data.odh-workbench-codeserver-datascience-cpu-py312-ubi9-commit-n
       kind: ConfigMap
       name: notebook-image-commithash
@@ -1368,6 +1589,19 @@ replacements:
           name: code-server-notebook
           version: v1
   - source:
+      fieldPath: data.odh-workbench-codeserver-datascience-cpu-py311-ubi9-commit-n-5
+      kind: ConfigMap
+      name: notebook-image-commithash
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.5.annotations.[opendatahub.io/notebook-build-commit]
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: code-server-notebook
+          version: v1
+  - source:
       fieldPath: data.odh-workbench-jupyter-minimal-rocm-py312-ubi9-commit-n
       kind: ConfigMap
       name: notebook-image-commithash
@@ -1401,6 +1635,19 @@ replacements:
     targets:
       - fieldPaths:
           - spec.tags.2.annotations.[opendatahub.io/notebook-build-commit]
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: jupyter-rocm-minimal
+          version: v1
+  - source:
+      fieldPath: data.odh-workbench-jupyter-minimal-rocm-py311-ubi9-commit-n-3
+      kind: ConfigMap
+      name: notebook-image-commithash
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.3.annotations.[opendatahub.io/notebook-build-commit]
         select:
           group: image.openshift.io
           kind: ImageStream
@@ -1446,6 +1693,19 @@ replacements:
           name: jupyter-rocm-pytorch
           version: v1
   - source:
+      fieldPath: data.odh-workbench-jupyter-pytorch-rocm-py311-ubi9-commit-n-3
+      kind: ConfigMap
+      name: notebook-image-commithash
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.3.annotations.[opendatahub.io/notebook-build-commit]
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: jupyter-rocm-pytorch
+          version: v1
+  - source:
       fieldPath: data.odh-workbench-jupyter-tensorflow-rocm-py312-ubi9-commit-n
       kind: ConfigMap
       name: notebook-image-commithash
@@ -1485,6 +1745,19 @@ replacements:
           name: jupyter-rocm-tensorflow
           version: v1
   - source:
+      fieldPath: data.odh-workbench-jupyter-tensorflow-rocm-py311-ubi9-commit-n-3
+      kind: ConfigMap
+      name: notebook-image-commithash
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.3.annotations.[opendatahub.io/notebook-build-commit]
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: jupyter-rocm-tensorflow
+          version: v1
+  - source:
       fieldPath: data.odh-workbench-jupyter-pytorch-llmcompressor-cuda-py312-ubi9-commit-n
       kind: ConfigMap
       name: notebook-image-commithash
@@ -1492,6 +1765,19 @@ replacements:
     targets:
       - fieldPaths:
           - spec.tags.0.annotations.[opendatahub.io/notebook-build-commit]
+        select:
+          group: image.openshift.io
+          kind: ImageStream
+          name: jupyter-pytorch-llmcompressor
+          version: v1
+  - source:
+      fieldPath: data.odh-workbench-jupyter-pytorch-llmcompressor-cuda-py312-ubi9-commit-n-1
+      kind: ConfigMap
+      name: notebook-image-commithash
+      version: v1
+    targets:
+      - fieldPaths:
+          - spec.tags.1.annotations.[opendatahub.io/notebook-build-commit]
         select:
           group: image.openshift.io
           kind: ImageStream
