--- a/manifests/base/params-latest.env
+++ b/manifests/base/params-latest.env
@@ -9,6 +9,7 @@ odh-workbench-jupyter-tensorflow-cuda-py312-ubi9-n=dummy
 odh-workbench-jupyter-tensorflow-rocm-py312-ubi9-n=dummy
 odh-workbench-jupyter-trustyai-cpu-py312-ubi9-n=dummy
 odh-workbench-codeserver-datascience-cpu-py312-ubi9-n=dummy
+odh-workbench-codeserver-datascience-cpu-py312-ubi9-n-1=dummy
 odh-pipeline-runtime-minimal-cpu-py312-ubi9-n=dummy
 odh-pipeline-runtime-datascience-cpu-py312-ubi9-n=dummy
 odh-pipeline-runtime-pytorch-cuda-py312-ubi9-n=dummy
