--- a/dependencies/odh-notebooks-meta-llmcompressor-deps/pyproject.toml
+++ b/dependencies/odh-notebooks-meta-llmcompressor-deps/pyproject.toml
@@ -18,7 +18,9 @@ dependencies = [
     "accelerate==1.12.0",
     "nvidia-ml-py==13.590.44",
     "pillow==11.3.0",
-    "auto-round==0.9.2",
+    # AIPCC-8753: auto-round 0.9.2 sdist contains compiled
+    # https://redhat-internal.slack.com/archives/C079FE5H94J/p1770229449708539
+    # "auto-round==0.9.2",
     "compressed-tensors==0.13.0",
 
     # see https://redhat-internal.slack.com/archives/C079FE5H94J/p1756933987117709?thread_ts=1756933154.294109&cid=C079FE5H94J
@@ -27,7 +29,7 @@ dependencies = [
     # we will ignore their torch preference for now
     #"torch==2.9.1",
 
-    "llmcompressor==0.9.0",
+    "llmcompressor==0.9.0.1",
 ]
 
 [tool.uv]
