--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Konflux caching
+cachi2/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -6,20 +9,21 @@ __pycache__/
 # C extensions
 *.so
 
-# Distribution / packaging
+# Distribution / packaging (anchored to repo root with leading / so nested
+# build/, lib/, bin/ directories in subprojects are not ignored)
 .Python
-build/
+/build/
 develop-eggs/
-dist/
+/dist/
 downloads/
 eggs/
 .eggs/
-lib/
-lib64/
+/lib/
+/lib64/
 parts/
 sdist/
 var/
-bin/
+/bin/
 wheels/
 share/python-wheels/
 *.egg-info/
