RHAIENG-3039: deps(datascience): re-enable codeflare-sdk
https://issues.redhat.com/browse/RHAIENG-3039

- Uncomment codeflare-sdk in jupyter/datascience and runtimes/datascience
- Add Codeflare-SDK to jupyter-datascience-notebook imagestream manifest

--- a/jupyter/pytorch/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/pytorch/ubi9-python-3.12/pyproject.toml
@@ -10,8 +10,7 @@ dependencies = [
     "torchvision==0.24.0",
 
     # Datascience and useful extensions
-    # TODO(RHAIENG-3039): Re-enable codeflare-sdk before RHOAI 3.4 GA
-    # "codeflare-sdk~=0.34.0",
+    "codeflare-sdk~=0.34.0",
     "feast~=0.59.0",
     "skl2onnx~=1.19.1",
     "odh-notebooks-meta-workbench-datascience-deps",
