--- a/jupyter/rocm/pytorch/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/rocm/pytorch/ubi9-python-3.12/pyproject.toml
@@ -11,8 +11,7 @@ dependencies = [
     "triton~=3.5.0",
 
     # Datascience and useful extensions
-    # TODO(RHAIENG-3039): Re-enable codeflare-sdk before RHOAI 3.4 GA
-    # "codeflare-sdk~=0.34.0",
+    "codeflare-sdk~=0.34.0",
     "feast~=0.59.0",
     "skl2onnx~=1.19.1",
     "odh-notebooks-meta-workbench-datascience-deps",
