--- a/manifests/base/jupyter-rocm-pytorch-notebook-imagestream.yaml
+++ b/manifests/base/jupyter-rocm-pytorch-notebook-imagestream.yaml
@@ -24,8 +24,6 @@ spec:
             {"name": "Python", "version": "v3.12"},
             {"name": "ROCm-PyTorch", "version": "2.9"}
           ]
-        # TODO(RHAIENG-3039): Re-enable Codeflare-SDK before RHOAI 3.4 GA
-        # {"name": "Codeflare-SDK", "version": "0.34"}
         # language=json
         opendatahub.io/notebook-python-dependencies: |
           [
@@ -41,6 +39,7 @@ spec:
             {"name": "Odh-Elyra", "version": "4.3"},
             {"name": "PyMongo", "version": "4.16"},
             {"name": "Pyodbc", "version": "5.3"},
+            {"name": "Codeflare-SDK", "version": "0.34"},
             {"name": "Feast", "version": "0.59"},
             {"name": "Sklearn-onnx", "version": "1.19"},
             {"name": "Psycopg", "version": "3.3"},
