--- a/runtimes/datascience/ubi9-python-3.12/pyproject.toml
+++ b/runtimes/datascience/ubi9-python-3.12/pyproject.toml
@@ -5,8 +5,7 @@ requires-python = "==3.12.*"
 
 dependencies = [
     # Datascience and useful extensions
-    # TODO(RHAIENG-3039): Re-enable codeflare-sdk before RHOAI 3.4 GA
-    # "codeflare-sdk~=0.34.0; platform_machine != 's390x' and platform_machine != 'ppc64le'",
+    "codeflare-sdk~=0.34.0; platform_machine != 's390x' and platform_machine != 'ppc64le'",
     "feast~=0.59.0",
     "odh-notebooks-meta-runtime-datascience-deps",
 
