--- a/runtimes/rocm-pytorch/ubi9-python-3.12/pyproject.toml
+++ b/runtimes/rocm-pytorch/ubi9-python-3.12/pyproject.toml
@@ -11,8 +11,7 @@ dependencies = [
     "triton~=3.5.0",
 
     # Datascience and useful extensions
-    # TODO(RHAIENG-3039): Re-enable codeflare-sdk before RHOAI 3.4 GA
-    # "codeflare-sdk~=0.34.0",
+    "codeflare-sdk~=0.34.0",
     "feast~=0.59.0",
     "odh-notebooks-meta-runtime-datascience-deps",
 
