chore(ci): begin building Dockerfile.konflux.* images based on AIPCC bases in red-hat-data-services

--- a/.github/workflows/build-notebooks-pr-aipcc.yaml
+++ b/.github/workflows/build-notebooks-pr-aipcc.yaml
@@ -94,4 +94,6 @@ jobs:
       platform: "${{ matrix.platform }}"
       # rhds/notebooks builds from AIPCC base images that are RHEL-based
       subscription: ${{ true }}
+    env:
+      KONFLUX: yes
     secrets: inherit
