fixup, env is not allowed in workflow YAML composite action

--- a/.github/workflows/build-notebooks-push.yaml
+++ b/.github/workflows/build-notebooks-push.yaml
@@ -79,6 +79,5 @@ jobs:
       platform: "${{ matrix.platform }}"
       # rhds/notebooks builds from AIPCC base images that are RHEL-based
       subscription: ${{ true }}
-    env:
-      KONFLUX: yes
+      konflux: ${{ true }}
     secrets: inherit
